@@ -1,8 +1,24 @@
+/*
+ * Copyright (C) 2023  Consiglio Nazionale delle Ricerche
+ *
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU Affero General Public License as
+ *     published by the Free Software Foundation, either version 3 of the
+ *     License, or (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU Affero General Public License for more details.
+ *
+ *     You should have received a copy of the GNU Affero General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package manager;
 
 import com.google.common.base.Optional;
 import com.google.common.collect.ImmutableList;
-import com.google.inject.Inject;
 import controllers.Security;
 import dao.AbsenceDao;
 import dao.AbsenceTypeDao;
@@ -12,12 +28,12 @@ import dao.wrapper.IWrapperFactory;
 import dao.wrapper.IWrapperPerson;
 import java.util.List;
 import java.util.stream.Collectors;
+import javax.inject.Inject;
 import javax.persistence.PersistenceException;
 import lombok.extern.slf4j.Slf4j;
 import manager.configurations.ConfigurationManager;
 import manager.configurations.EpasParam;
 import manager.configurations.EpasParam.EpasParamValueType.LocalTimeInterval;
-import manager.services.absences.AbsenceForm;
 import manager.services.absences.AbsenceService;
 import manager.services.absences.AbsenceService.InsertReport;
 import models.ContractWorkingTimeType;
@@ -29,7 +45,6 @@ import models.WorkingTimeType;
 import models.WorkingTimeTypeDay;
 import models.absences.Absence;
 import models.absences.AbsenceType;
-import models.absences.CategoryTab;
 import models.absences.GroupAbsenceType;
 import models.absences.JustifiedType;
 import models.absences.JustifiedType.JustifiedTypeName;
@@ -39,8 +54,12 @@ import org.joda.time.DateTimeConstants;
 import org.joda.time.LocalDate;
 import org.joda.time.LocalDateTime;
 import org.testng.collections.Lists;
+import play.cache.Cache;
 import play.db.jpa.JPA;
 
+/**
+ * Manager per la gestione delle missioni.
+ */
 @Slf4j
 public class MissionManager {
 
@@ -86,6 +105,7 @@ public class MissionManager {
   /**
    * Metodo che verifica se al numero di matricola passato come parametro nel dto corrisponde
    * effettivamente una persona in anagrafica.
+   *
    * @param mission il dto creato dal json arrivato dal listener
    * @return la person, se esiste, associata alla matricola contenuta nel dto.
    */
@@ -113,28 +133,44 @@ public class MissionManager {
 
   /**
    * Metodo che crea la missione a partire dai dati del dto inviato da Missioni.
+   *
    * @param body il dto ricavato dal json arrivato dal listener
    * @param recompute se deve essere avviato il ricalcolo
    * @return true se riesce a inserire la missione con i parametri esplicitati nel body, 
    *     false altrimenti.
+   * @throws InterruptedException eccezione
    */
   public boolean createMissionFromClient(MissionFromClient body, boolean recompute) {
+
+    String missionCacheKey = "createMission." + body.id;
+    boolean managedMissionOk = true;
+    
+    if (Cache.get(missionCacheKey) == null) {
+      log.debug(LOG_PREFIX + "Imposto la cache {} con valore true", missionCacheKey);
+      Cache.set(missionCacheKey, true, "1mn");
+    } else {
+      log.warn(LOG_PREFIX + "Creazione missione annullata, "
+          + "è già in corso un inserimento per la missione {}", body);
+      return false;
+    }
 
     //AbsenceForm absenceForm = buildAbsenceForm(body);
     if (body.dataInizio.isAfter(body.dataFine)) {
       log.warn(LOG_PREFIX + "Le date di inizio e fine sono invertite!! La missione {} di {} "
           + "non può essere processata!! Verificare!", body.id, body.person.fullName());
+      Cache.delete(missionCacheKey);
       return false;
     }
     
-    Office office = body.person.office;
+    Office office = body.person.getOffice();
 
     //verifico il parametro di ora inizio lavoro in sede
     LocalTimeInterval workInterval = (LocalTimeInterval) configurationManager.configValue(
         office, EpasParam.WORK_INTERVAL_MISSION_DAY, body.dataInizio.toLocalDate());
     if (workInterval == null) {
       log.warn(LOG_PREFIX +  "Il parametro di orario di lavoro missione "
-          + "non è valorizzato per la sede {}", office.name);
+          + "non è valorizzato per la sede {}", office.getName());
+      Cache.delete(missionCacheKey);
       return false;
     }
     List<Absence> existingMission = absenceDao.absencesPersistedByMissions(body.id);
@@ -142,36 +178,42 @@ public class MissionManager {
       //Se esiste già una missione con quell'identificativo, la scarto.
       log.warn(LOG_PREFIX +  "E' stata riscontrata una missione con lo stesso identificativo di "
           + "quella passata come parametro: {}. Questa missione non viene processata.", body.id);
-      return false;      
+      Cache.delete(missionCacheKey);
+      return false;
     }
-    
+
     //controllo se sono già stati inseriti a mano i giorni di missione
     final List<JustifiedTypeName> types = ImmutableList
         .of(JustifiedTypeName.complete_day_and_add_overtime, JustifiedTypeName.specified_minutes);
     List<Absence> existingMissionWithoutId = 
         absenceDao.filteredByTypes(body.person, body.dataInizio.toLocalDate(), 
-            body.dataFine.toLocalDate(), types, Optional.<Boolean>absent());
+            body.dataFine.toLocalDate(), types, Optional.<Boolean>absent(), 
+            Optional.<Boolean>absent());
     if (!existingMissionWithoutId.isEmpty()  
-        && existingMissionWithoutId.stream().allMatch(abs -> abs.absenceType.code.equals("92") 
-            || abs.absenceType.code.equals("92M"))) {
+        && existingMissionWithoutId.stream()
+          .allMatch(abs -> abs.getAbsenceType().getCode().equals("92") 
+            || abs.getAbsenceType().getCode().equals("92M"))) {
       log.warn(LOG_PREFIX +  "Sono stati riscontrati codici di missione già inseriti manualmente"
-          + " nei giorni {}-{}. Questa missione non viene processata.", 
+          + " nei giorni {}-{}. Questa missione non viene processata.",
           body.dataInizio.toLocalDate(), body.dataFine.toLocalDate());
+      Cache.delete(missionCacheKey);
       return false;
     }
 
     Situation situation;
-    
+
     if (body.dataInizio.toLocalDate().isEqual(body.dataFine.toLocalDate())) {
       //caso di giorno unico di missione
       situation = getSituation(body.dataInizio, body, workInterval);
-      if (insertMission(body.destinazioneMissione, body.person, 
-          new Integer(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
-          new Integer(situation.difference % DateTimeConstants.MINUTES_PER_HOUR),
+      if (insertMission(body.destinazioneMissione, body.person,
+          Integer.valueOf(situation.difference / DateTimeConstants.MINUTES_PER_HOUR),
+          Integer.valueOf(situation.difference % DateTimeConstants.MINUTES_PER_HOUR),
           body.dataInizio, body.dataFine, body.id, body.idOrdine, body.anno, body.numero)) {
         recalculate(body, Optional.<List<Absence>>absent());
+        Cache.delete(missionCacheKey);
         return true;
       } else {
+        Cache.delete(missionCacheKey);
         return false;
       }
     }
@@ -180,16 +222,20 @@ public class MissionManager {
     while (!actualDate.toLocalDate().isAfter(body.dataFine.toLocalDate())) {
       situation = getSituation(actualDate, body, workInterval);      
 
-      atomicInsert(situation, body, actualDate);
+      if (!atomicInsert(situation, body, actualDate)) {
+        managedMissionOk = false;
+      }
       actualDate = actualDate.plusDays(1);
-      
-    }    
+
+    }
     recalculate(body, Optional.<List<Absence>>absent());
-    return true;
+    Cache.delete(missionCacheKey);
+    return managedMissionOk;
   }
-  
+
   /**
    * Metodo di utilità per calcolare la situazione delle ore da giustificare per la missione.
+   *
    * @param actualDate la data che si sta considerando
    * @param body l'oggetto contenente le info di missione
    * @param workInterval l'intervallo di inizio/fine attività lavorativa per missione
@@ -244,6 +290,7 @@ public class MissionManager {
 
   /**
    * Metodo di utilità.
+   *
    * @param body il dto proveniente da Missioni
    * @param actualDate il giorno di missione
    * @return il workingTimeTypeDay dell'ultimo giorno di missione.
@@ -253,11 +300,11 @@ public class MissionManager {
     Optional<ContractWorkingTimeType> cwtt = wrappedPerson.getCurrentContractWorkingTimeType();
     WorkingTimeTypeDay dayNumber = null;
     if (cwtt.isPresent()) {
-      WorkingTimeType wtt = cwtt.get().workingTimeType;
+      WorkingTimeType wtt = cwtt.get().getWorkingTimeType();
       int day = actualDate.getDayOfWeek();
 
-      for (WorkingTimeTypeDay wttd : wtt.workingTimeTypeDays) {
-        if (wttd.dayOfWeek == day) {
+      for (WorkingTimeTypeDay wttd : wtt.getWorkingTimeTypeDays()) {
+        if (wttd.getDayOfWeek() == day) {
           dayNumber = wttd;
         }
       }
@@ -269,11 +316,13 @@ public class MissionManager {
   /**
    * Metodo che ricontrolla le date della missione dopo le info pervenute da Missioni in occasione
    * del rimborso.
+   *
    * @param body il dto contenente i dati della missione
    * @param recompute se deve essere effettuato il ricalcolo
    * @return true se la gestione della missione è andata a buon fine, false altrimenti.
    */
   public boolean manageMissionFromClient(MissionFromClient body, boolean recompute) {
+    boolean managedMissionOk = true;
     if (body.idOrdine == null) {
       return false;
     }
@@ -285,30 +334,32 @@ public class MissionManager {
       return false;
     }
     LocalTimeInterval workInterval = (LocalTimeInterval) configurationManager.configValue(
-        body.person.office, EpasParam.WORK_INTERVAL_MISSION_DAY, body.dataInizio.toLocalDate());
+        body.person.getOffice(), 
+        EpasParam.WORK_INTERVAL_MISSION_DAY, body.dataInizio.toLocalDate());
     if (workInterval == null) {
       log.warn(LOG_PREFIX +  "Il parametro di orario di lavoro missione "
-          + "non è valorizzato per la sede {}", body.person.office.name);
+          + "non è valorizzato per la sede {}", body.person.getOffice().getName());
       return false;
     }
     //AbsenceForm absenceForm = buildAbsenceForm(body);
     GroupAbsenceType group = null;
     switch (body.destinazioneMissione) {
       case "ITALIA":
-        group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
+        group = absComponentDao
+        .groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
         break;
       case "ESTERA":
         group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_ESTERA.name()).get();
         break;
-        default:
-          break;
+      default:
+        break;
     }
     List<LocalDate> dates = datesToCompute(body);
     //lista assenze da rimuovere
     List<Absence> toRemove = missions.stream()
-        .filter(abs -> !dates.contains(abs.personDay.date)).collect(Collectors.toList());
+        .filter(abs -> !dates.contains(abs.getPersonDay().getDate())).collect(Collectors.toList());
     List<LocalDate> missionsDate = missions.stream()
-        .map(a -> a.personDay.date).collect(Collectors.toList());
+        .map(a -> a.getPersonDay().getDate()).collect(Collectors.toList());
     //lista assenze da inserire
     List<LocalDate> toAdd = dates.stream()
         .filter(p -> !missionsDate.contains(p)).collect(Collectors.toList());        
@@ -324,7 +375,9 @@ public class MissionManager {
         return false;
       }
       situation = getSituation(dateToConsider, body, workInterval);
-      atomicInsert(situation, body, dateToConsider);
+      if (!atomicInsert(situation, body, dateToConsider)) {
+        managedMissionOk = false;
+      }
       
     }
     /*
@@ -336,9 +389,9 @@ public class MissionManager {
     for (Absence abs : missions) {
       LocalDateTime actual = body.dataInizio;
       while (!actual.toLocalDate().isAfter(body.dataFine.toLocalDate())) {
-        if (abs.personDay.date.isEqual(actual.toLocalDate())) {
-          int time = getFromDayOfMission(body.person, actual.toLocalDate()).workingTime;
-          int minutes = abs.justifiedMinutes;
+        if (abs.getPersonDay().getDate().isEqual(actual.toLocalDate())) {
+          int time = getFromDayOfMission(body.person, actual.toLocalDate()).getWorkingTime();
+          int minutes = abs.getJustifiedMinutes();
           Situation sit = getSituation(actual, body, workInterval);
           if (minutes != sit.difference) {
             if ((minutes == 0 && sit.difference >= time) 
@@ -357,12 +410,13 @@ public class MissionManager {
     
     //consistencyManager.updatePersonSituation(body.person.id, body.dataInizio.toLocalDate());
     recalculate(body, Optional.fromNullable(missions));
-    log.debug("Lanciati i ricalcoli");
-    return true;
+    log.debug("Lanciati i ricalcoli per {} dal {}", body.person, body.dataInizio);
+    return managedMissionOk;
   }
 
   /**
    * Metodo che cancella una missione inviata precedentemente da Missioni.
+   *
    * @param body il dto contenente i dati della missione
    * @param recompute se devono essere effettuati i ricalcoli
    * @return true se la missione viene cancellata, false altrimenti.
@@ -376,13 +430,14 @@ public class MissionManager {
     GroupAbsenceType group = null;
     switch (body.destinazioneMissione) {
       case "ITALIA":
-        group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
+        group = absComponentDao
+        .groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
         break;
       case "ESTERA":
         group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_ESTERA.name()).get();
         break;
-        default:
-          break;
+      default:
+        break;
     }
     if (!performDeleteMission(missions, group)) {
       return false;
@@ -393,6 +448,7 @@ public class MissionManager {
 
   /**
    * Metodo privato che ritorna la lista delle date su cui fare i controlli.
+   *
    * @param body il dto contenente i dati della missione
    * @return la lista delle date da considerare per gestire la missione.
    */
@@ -408,6 +464,7 @@ public class MissionManager {
 
   /**
    * Metodo privato che inserisce i giorni di missione.
+   *
    * @param body il dto contenente le informazioni della missione
    * @param absenceForm l'absenceForm relativo alla missione
    * @param hours le ore 
@@ -425,74 +482,84 @@ public class MissionManager {
     GroupAbsenceType group = null;
     switch (destination) {
       case "ITALIA":
-        group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
+        group = absComponentDao
+        .groupAbsenceTypeByName(DefaultGroup.MISSIONE_GIORNALIERA.name()).get();
         mission = absenceTypeDao.getAbsenceTypeByCode("92").get(); 
         break;
       case "ESTERA":
         group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_ESTERA.name()).get();
         mission = absenceTypeDao.getAbsenceTypeByCode("92E").get();
         break;
-        default:
-          break;
+      default:
+        break;
     }
     int quantity = 0;
     if (hours != null && minutes != null) {
       quantity = hours * DateTimeConstants.MINUTES_PER_HOUR + minutes;
     }
-    int day = getFromDayOfMission(person, to.toLocalDate()).dayOfWeek;
+    int day = getFromDayOfMission(person, to.toLocalDate()).getDayOfWeek();
     if (quantity < 0) {
       mission = absenceTypeDao.getAbsenceTypeByCode("92NG").get();
       type = absComponentDao.getOrBuildJustifiedType(JustifiedTypeName.nothing);
-      
-    } else if (quantity == 0 || quantity > getFromDayOfMission(person, to.toLocalDate()).workingTime
+
+    } else if (quantity == 0 
+                || quantity > getFromDayOfMission(person, to.toLocalDate()).getWorkingTime()
         || day == DateTimeConstants.SATURDAY || day == DateTimeConstants.SUNDAY) {
       type = absComponentDao
           .getOrBuildJustifiedType(JustifiedTypeName.complete_day_and_add_overtime);
-      
+
     } else {
       group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_ORARIA.name()).get();
       mission = absenceTypeDao.getAbsenceTypeByCode("92M").get();
       type = absComponentDao
           .getOrBuildJustifiedType(JustifiedType.JustifiedTypeName.specified_minutes);      
     }
-    
+
+    if (mission == null) {
+      log.error("Impossibile determinare il tipo di missione 92/92E/92NG/... "
+          + "Missione per {}, numero {}, dal {} al {}, orario {}:{}",
+          person.getFullname(), numero, from, to, hours, minutes);
+      return false;
+    }
+
     log.debug(LOG_PREFIX + "Sto per inserire una missione per {}. Codice {}, {} - {}, "
-        + "tempo {}:{}", person, mission.code, from, to, hours, minutes);
-    
+        + "tempo {}:{}", person, mission.getCode(), from, to, hours, minutes);
+
     Integer localHours = hours;
     Integer localMinutes = minutes;
-  
-    //val absenceForm = buildAbsenceForm(person, from.toLocalDate(), to.toLocalDate(), group);
 
     InsertReport insertReport = 
         absenceService.insert(person, group, from.toLocalDate(), 
             to.toLocalDate(), mission, type, 
             localHours, localMinutes, false, absenceManager);
-    if (insertReport.criticalErrors.isEmpty() || insertReport.warningsPreviousVersion.isEmpty()) {
+    log.debug("Insert Report = {}", insertReport);
+    if (insertReport.criticalErrors.isEmpty() && insertReport.warningsPreviousVersion.isEmpty()
+        && !insertReport.absencesToPersist.isEmpty()) {
       for (Absence absence : insertReport.absencesToPersist) {
         PersonDay personDay = personDayManager
             .getOrCreateAndPersistPersonDay(person, absence.getAbsenceDate());
-        absence.personDay = personDay;
-        personDay.absences.add(absence);
+        absence.setPersonDay(personDay);
+        personDay.getAbsences().add(absence);
         if (idOrdine != null) {
-          absence.externalIdentifier = idOrdine;
+          absence.setExternalIdentifier(idOrdine);
         } else {
-          absence.externalIdentifier = id;
+          absence.setExternalIdentifier(id);
         }
-        absence.note = "Missione: " + numero +'\n' 
-            + "Anno: " +anno+'\n' 
-            + "(Identificativo: " +absence.externalIdentifier +")";
-                
+        absence.setNote("Missione: " + numero + '\n' 
+            + "Anno: " + anno + '\n' 
+            + "(Identificativo: " + absence.getExternalIdentifier() + ")");
+
         absence.save();
-        
+
         final Optional<User> currentUser = Security.getUser();
         if (currentUser.isPresent()) {
           notificationManager.notificationAbsencePolicy(currentUser.get(), 
               absence, group, true, false, false);  
         }
 
-        log.info(LOG_PREFIX +  "Inserita assenza {} del {} per {}.", absence.absenceType.code, 
-            absence.personDay.date, absence.personDay.person.fullName());
+        log.info(LOG_PREFIX +  "Inserita assenza {} del {} per {}.", 
+            absence.getAbsenceType().getCode(), 
+            absence.getPersonDay().getDate(), absence.getPersonDay().getPerson().fullName());
 
       }
       if (!insertReport.reperibilityShiftDate().isEmpty()) {
@@ -504,6 +571,10 @@ public class MissionManager {
       }
       JPA.em().flush();
       return true;
+    } else {
+      log.info("Missione id={} di {}, insert Report con problemi di inserimento o "
+          + "nessuna assenza da inserire = {}",
+          id, person.getFullname(), insertReport);
     }
 
     return false;
@@ -511,6 +582,7 @@ public class MissionManager {
 
   /**
    * Metodo che si occupa di cancellare i singoli giorni di missione.
+   *
    * @param missions la lista delle assenze da cancellare
    * @param absenceForm l'absenceForm per notificare la cancellazione dell'assenza
    * @return true se la cancellazione è andata a buon fine, false altrimenti.
@@ -527,7 +599,8 @@ public class MissionManager {
       notificationManager.notificationAbsencePolicy(currentUser, 
           abs, group, false, false, true);
       log.info(LOG_PREFIX + "Rimossa assenza {} del {} per {}.", 
-          abs.absenceType.code, abs.personDay.date, abs.personDay.person.getFullname());
+          abs.getAbsenceType().getCode(), abs.getPersonDay().getDate(), 
+          abs.getPersonDay().getPerson().getFullname());
 
     }
     if (result) {
@@ -539,6 +612,7 @@ public class MissionManager {
 
   /**
    * Metodo che cancella dal personDay l'assenza.
+   *
    * @param abs l'assenza (missione) da cancellare
    * @param result se la rimozione precedente è andata a buon fine
    * @return true se l'assenza è stata cancellata, false altrimenti.
@@ -546,8 +620,8 @@ public class MissionManager {
   private boolean atomicRemoval(Absence abs, boolean result) {
     try {
       abs.delete();
-      abs.personDay.absences.remove(abs);
-      abs.personDay.save();
+      abs.getPersonDay().getAbsences().remove(abs);
+      abs.getPersonDay().save();
       result = true;
     } catch (Exception ex) {
       result = false;
@@ -557,27 +631,9 @@ public class MissionManager {
     return result;
   }
 
-  private AbsenceForm buildAbsenceForm(MissionFromClient body) {
-    CategoryTab categoryTab = null;
-    GroupAbsenceType groupAbsenceType = null;
-    AbsenceType absenceType = null;
-    JustifiedType justifiedType = null;
-    Integer hours = null;
-    Integer minutes = null;
-    AbsenceForm absenceForm =
-        absenceService.buildAbsenceForm(body.person, body.dataInizio.toLocalDate(), 
-            categoryTab, body.dataFine.toLocalDate(), null, 
-            groupAbsenceType, false, absenceType, justifiedType, hours, minutes, false, false);
-    return absenceForm;
-  }
-
-  private AbsenceForm buildAbsenceForm(Person person, LocalDate dataInizio, LocalDate dataFine, GroupAbsenceType group) {
-    return absenceService.buildAbsenceForm(person, dataInizio, null, dataFine, null, group, false, 
-        null, null, null, null, false, false);
-  }
-
   /**
    * ricalcola la situazione del dipendente.
+   *
    * @param body il dto contenente le info dell'ordine/rimborso di missione
    */
   private void recalculate(MissionFromClient body, Optional<List<Absence>> missions) {
@@ -585,8 +641,8 @@ public class MissionManager {
     if (missions.isPresent()) {
 
       for (Absence abs : missions.get()) {
-        if (abs.personDay.date.isBefore(begin)) {
-          begin = abs.personDay.date;
+        if (abs.getPersonDay().getDate().isBefore(begin)) {
+          begin = abs.getPersonDay().getDate();
         }
       }
     }
@@ -596,6 +652,7 @@ public class MissionManager {
   /**
    * Metodo privato che ritorna la localDateTime associata alla data passata come parametro
    * da ricercare all'interno del periodo inizio/fine missione del body.
+   *
    * @param date la data che si sta cercando
    * @param body l'oggetto mission from client
    * @return il localDateTime relativo alla data passata come parametro calcolato internamente
@@ -617,32 +674,35 @@ public class MissionManager {
   
   /**
    * Metodo che consente l'inserimento di un'assenza per missione sul giorno indicato.
+   *
    * @param situation l'oggetto contenente la situazione relativa al giorno di missione
    * @param body l'oggetto dto proveniente dal mission manager
    * @param actualDate la data attuale su cui lavorare
    */
-  private void atomicInsert(Situation situation, MissionFromClient body, LocalDateTime actualDate) {
+  private boolean atomicInsert(
+      Situation situation, MissionFromClient body, LocalDateTime actualDate) {
     boolean missionInserted = false;
     
     if (situation.isFirstOrLastDay) {
       if (situation.difference < 0) {
         //sono partito dopo la fine della giornata lavorativa o sono tornato prima dell'inizio 
         //della stessa --> metto un 92M con 1 minuto
-        if (insertMission(body.destinazioneMissione, body.person, new Integer(0), new Integer(-1), 
+        if (insertMission(body.destinazioneMissione, body.person, 
+            Integer.valueOf(0), Integer.valueOf(-1), 
             actualDate, actualDate, body.id, body.idOrdine, body.anno, body.numero)) {
           missionInserted = true;
         } 
       } else {
         if (situation.difference 
-            > getFromDayOfMission(body.person, actualDate.toLocalDate()).workingTime) {
+            > getFromDayOfMission(body.person, actualDate.toLocalDate()).getWorkingTime()) {
           if (insertMission(body.destinazioneMissione, body.person,  
               null, null, actualDate, actualDate, body.id, body.idOrdine, body.anno, body.numero)) {
             missionInserted = true;
           } 
         } else {
           if (insertMission(body.destinazioneMissione, body.person,  
-              new Integer(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
-              new Integer(situation.difference % DateTimeConstants.MINUTES_PER_HOUR), 
+              Integer.valueOf(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
+              Integer.valueOf(situation.difference % DateTimeConstants.MINUTES_PER_HOUR), 
               actualDate, actualDate, body.id, body.idOrdine, body.anno, body.numero)) {
             missionInserted = true;
           } 
@@ -659,11 +719,13 @@ public class MissionManager {
           + "idOrdine = {}, anno = {}, numero = {}", body.destinazioneMissione, 
           actualDate, body.id, body.idOrdine, body.anno, body.numero);      
     }
+    return missionInserted;
   }
   
   /**
    * Classe privata di aiuto.
-   * @author dario     
+   *
+   * @author Dario Tagliaferri
    */
   private static class Situation {
     private int difference;
