@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2021  Consiglio Nazionale delle Ricerche
+ *
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU Affero General Public License as
+ *     published by the Free Software Foundation, either version 3 of the
+ *     License, or (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU Affero General Public License for more details.
+ *
+ *     You should have received a copy of the GNU Affero General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package manager;
 
 import com.google.common.base.Optional;
@@ -50,7 +67,7 @@ import models.enumerate.CalculationType;
 import models.enumerate.PaymentType;
 import models.enumerate.ShiftSlot;
 import models.enumerate.ShiftTroubles;
-import org.joda.time.Interval;
+import org.joda.time.DateTimeConstants;
 import org.joda.time.LocalDate;
 import org.joda.time.LocalDateTime;
 import org.joda.time.LocalTime;
@@ -61,7 +78,7 @@ import play.i18n.Messages;
 /**
  * Gestiore delle operazioni sui turni ePAS.
  *
- * @author arianna
+ * @author Arianna Del Soldato
  */
 @Slf4j
 public class ShiftManager2 {
@@ -83,6 +100,20 @@ public class ShiftManager2 {
   private final GeneralSettingDao generalSettingDao;
 
 
+  /**
+   * Injector.
+   *
+   * @param personDayManager il personDayManager
+   * @param personShiftDayDao il dao sul personShiftDay
+   * @param personDayDao il dao sul personDay
+   * @param shiftDao il dao sui turni
+   * @param competenceUtility il manager per le competenze
+   * @param competenceCodeDao il dao per i competenceCode
+   * @param competenceDao il dao per le competenze
+   * @param personMonthRecapDao il dao sui residui mensili
+   * @param shiftTypeMonthDao il dao sulle attribuzioni mensili dei turni
+   * @param generalSettingDao il dao sui parametri generali
+   */
   @Inject
   public ShiftManager2(PersonDayManager personDayManager, PersonShiftDayDao personShiftDayDao,
       PersonDayDao personDayDao, ShiftDao shiftDao, CompetenceUtility competenceUtility,
@@ -101,40 +132,44 @@ public class ShiftManager2 {
   }
 
   /**
+   * Metodo che ritorna la lista delle attività associate all'utente che ne fa richiesta.
+   *
    * @return la lista delle attività associate all'utente che ne fa richiesta.
    */
   public List<ShiftType> getUserActivities() {
     List<ShiftType> activities = Lists.newArrayList();
     User currentUser = Security.getUser().get();
-    Person person = currentUser.person;
+    Person person = currentUser.getPerson();
     if (person != null) {
-      if (!person.shiftCategories.isEmpty()) {
-        activities.addAll(person.shiftCategories.stream().filter(st -> !st.disabled)
-            .flatMap(shiftCategories -> shiftCategories.shiftTypes.stream())
-            .sorted(Comparator.comparing(o -> o.type))
+      if (!person.getShiftCategories().isEmpty()) {
+        activities.addAll(person.getShiftCategories().stream().filter(st -> !st.isDisabled())
+            .flatMap(shiftCategories -> shiftCategories.getShiftTypes().stream())
+            .sorted(Comparator.comparing(o -> o.getType()))
             .collect(Collectors.toList()));
 
       }
-      if (!person.categories.isEmpty()) {
-        activities.addAll(person.categories.stream().filter(st -> !st.disabled)
-            .flatMap(shiftCategories -> shiftCategories.shiftTypes.stream())
-            .sorted(Comparator.comparing(o -> o.type))
+      if (!person.getCategories().isEmpty()) {
+        activities.addAll(person.getCategories().stream().filter(st -> !st.isDisabled())
+            .flatMap(shiftCategories -> shiftCategories.getShiftTypes().stream())
+            .sorted(Comparator.comparing(o -> o.getType()))
             .collect(Collectors.toList()));
       }
-      if (!person.personShifts.isEmpty()) {
-        activities.addAll(person.personShifts.stream().filter(ps -> !ps.disabled)
-            .filter(ps -> !ps.beginDate.isAfter(LocalDate.now()) 
-                && (ps.endDate == null || !ps.endDate.isBefore(LocalDate.now())))
-            .flatMap(ps -> ps.personShiftShiftTypes.stream())
-            .map(psst -> psst.shiftType).filter(sc -> !sc.shiftCategories.disabled)
-            .sorted(Comparator.comparing(o -> o.type))
+      if (!person.getPersonShifts().isEmpty()) {
+        activities.addAll(person.getPersonShifts().stream().filter(ps -> !ps.isDisabled())
+            .filter(ps -> !ps.getBeginDate().isAfter(LocalDate.now()) 
+                && (ps.getEndDate() == null || !ps.getEndDate().isBefore(LocalDate.now())))
+            .flatMap(ps -> ps.getPersonShiftShiftTypes().stream())
+            .filter(psst -> psst.getEndDate() == null || psst.getEndDate().isAfter(LocalDate.now()))
+            .map(psst -> psst.getShiftType()).filter(sc -> !sc.getShiftCategories().isDisabled())
+            .sorted(Comparator.comparing(o -> o.getType()))
             .collect(Collectors.toList()));
       }
       if (currentUser.hasRoles(Role.PERSONNEL_ADMIN)) {
-        activities.addAll(currentUser.usersRolesOffices.stream()
-            .flatMap(uro -> uro.office.shiftCategories.stream().filter(st -> !st.disabled)
-                .flatMap(shiftCategories -> shiftCategories.shiftTypes.stream())
-                .sorted(Comparator.comparing(o -> o.type)))
+        activities.addAll(currentUser.getUsersRolesOffices().stream()
+            .flatMap(uro -> uro.getOffice().getShiftCategories().stream()
+                .filter(st -> !st.isDisabled())
+                .flatMap(shiftCategories -> shiftCategories.getShiftTypes().stream())
+                .sorted(Comparator.comparing(o -> o.getType())))
             .collect(Collectors.toList()));
       }
     } else {
@@ -154,7 +189,8 @@ public class ShiftManager2 {
   public String checkShiftDayCompatibilityWhithAllDayPresence(PersonShiftDay shift,
       LocalDate date) {
     String errCode = "";
-    Optional<PersonDay> personDay = personDayDao.getPersonDay(shift.personShift.person, date);
+    Optional<PersonDay> personDay = personDayDao
+        .getPersonDay(shift.getPersonShift().getPerson(), date);
 
     // controlla che il nuovo turno non coincida con un giorno di assenza del turnista 
     if (personDayManager.isAllDayAbsences(personDay.get())) {
@@ -165,7 +201,7 @@ public class ShiftManager2 {
 
 
   /**
-   * popola la tabella PersonShift andando a cercare nel db tutte le persone che son già
+   * Popola la tabella PersonShift andando a cercare nel db tutte le persone che son già
    * state abilitate a usufruire dell'indennità di turno.
    */
   public void populatePersonShiftTable() {
@@ -179,14 +215,14 @@ public class ShiftManager2 {
     List<PersonCompetenceCodes> shiftPeople = competenceCodeDao
         .listByCodes(codeList, Optional.fromNullable(LocalDate.now()));
     shiftPeople.forEach(item -> {
-      if (personShiftDayDao.getPersonShiftByPerson(item.person, LocalDate.now()) == null) {
+      if (personShiftDayDao.getPersonShiftByPerson(item.getPerson(), LocalDate.now()) == null) {
         PersonShift personShift = new PersonShift();
-        personShift.description = "turni di " + item.person.fullName();
-        personShift.person = item.person;
+        personShift.setDescription("turni di " + item.getPerson().fullName());
+        personShift.setPerson(item.getPerson());
         personShift.save();
       } else {
         log.info("Dipendente {} {} già associato all'interno della tabella person_shift",
-            item.person.name, item.person.surname);
+            item.getPerson().getName(), item.getPerson().getSurname());
       }
 
     });
@@ -206,7 +242,7 @@ public class ShiftManager2 {
    */
   public Optional<String> shiftPermitted(PersonShiftDay personShiftDay) {
 
-    /**
+    /*
      * 0. Verificare se la persona è segnata in quell'attività in quel giorno
      *    return shift.personInactive
      * 1. La Persona non deve essere già in un turno per quel giorno
@@ -215,27 +251,29 @@ public class ShiftManager2 {
      */
 
     //Verifica se la persona è attiva in quell'attività in quel giorno
-    final boolean isActive = personShiftDay.shiftType.personShiftShiftTypes.stream().anyMatch(
-        personShiftShiftType -> personShiftShiftType.personShift.equals(personShiftDay.personShift)
-        && personShiftShiftType.dateRange().contains(personShiftDay.date));
+    final boolean isActive = personShiftDay.getShiftType()
+        .getPersonShiftShiftTypes().stream().anyMatch(personShiftShiftType -> personShiftShiftType
+        .getPersonShift().equals(personShiftDay.getPersonShift())
+        && personShiftShiftType.dateRange().contains(personShiftDay.getDate()));
     if (!isActive) {
       return Optional.of(Messages.get("shift.personInactive"));
     }
 
     // Verifica che la persona non abbia altri turni nello stesso giorno (anche su altre attività)
-    // TODO: 06/06/17 Verificare se questo vincolo va bene o deve esistere solo per 2
-    // turni
-    // sulla stessa attività
-    final Optional<PersonShiftDay> personShift = personShiftDayDao
-        .byPersonAndDate(personShiftDay.personShift.person, personShiftDay.date);
+    // Condizionato per INAF con parametro generalSetting
+    GeneralSetting setting = generalSettingDao.generalSetting();
+    if (setting != null && setting.isEnableUniqueDailyShift()) {
+      final Optional<PersonShiftDay> personShift = personShiftDayDao
+          .byPersonAndDate(personShiftDay.getPersonShift().getPerson(), personShiftDay.getDate());
 
-    if (personShift.isPresent()) {
-      return Optional.of(Messages.get("shift.alreadyInShift", personShift.get().shiftType));
+      if (personShift.isPresent()) {
+        return Optional.of(Messages.get("shift.alreadyInShift", personShift.get().getShiftType()));
+      }
     }
-
+    
     // Controllo se sono assente il giorno di turno
     final Optional<PersonDay> personDay = personDayDao
-        .getPersonDay(personShiftDay.personShift.person, personShiftDay.date);
+        .getPersonDay(personShiftDay.getPersonShift().getPerson(), personShiftDay.getDate());
 
     if (personDay.isPresent() && personDayManager.isAllDayAbsences(personDay.get())) {
       return Optional.of(Messages.get("shift.absenceInDay"));
@@ -245,32 +283,44 @@ public class ShiftManager2 {
     CompetenceCode holidayCode = competenceCodeDao.getCompetenceCodeByCode(codShiftHolyday);
 
     final boolean isHolidayShiftEnabled = 
-        personShiftDay.personShift.person.personCompetenceCodes
-        .stream().anyMatch(pcc -> pcc.competenceCode.equals(holidayCode) 
-            && !pcc.beginDate.isAfter(personShiftDay.date));
+        personShiftDay.getPersonShift().getPerson().getPersonCompetenceCodes()
+        .stream().anyMatch(pcc -> pcc.getCompetenceCode().equals(holidayCode) 
+            && !pcc.getBeginDate().isAfter(personShiftDay.getDate()));
 
-    if (personDayManager.isHoliday(personShiftDay.personShift.person, personShiftDay.date) 
-        && !isHolidayShiftEnabled) {
-      return Optional.of(Messages.get("shift.holidayShiftNotEnabled"));
+    
+    if (setting != null) {
+      if (personDayManager.isHoliday(personShiftDay.getPersonShift().getPerson(), 
+          personShiftDay.getDate(), 
+          setting.isSaturdayHolidayShift()) && !isHolidayShiftEnabled) {          
+        return Optional.of(Messages.get("shift.holidayShiftNotEnabled"));
+      } 
+
+    } else {
+      log.warn("Non sono correttamente configurati i parametri generali. "
+          + "Controllo sul sabato festivo/feriale non praticabile");
     }
 
+
     List<PersonShiftDay> list = personShiftDayDao
-        .byTypeInPeriod(personShiftDay.date, personShiftDay.date,
-            personShiftDay.shiftType, Optional.absent());
+        .byTypeInPeriod(personShiftDay.getDate(), personShiftDay.getDate(),
+            personShiftDay.getShiftType(), Optional.absent());
 
     //Controllo se è abilitata la disparità di slot nell'attività di turno
-    if (!personShiftDay.shiftType.allowUnpairSlots) {
+    if (!personShiftDay.getShiftType().isAllowUnpairSlots()) {
       for (PersonShiftDay registeredDay : list) {
-        if (personShiftDay.shiftType.organizaionShiftTimeTable != null) {
+        if (personShiftDay.getShiftType().getOrganizaionShiftTimeTable() != null) {
           //controlla che il turno in quello slot sia già stato assegnato ad un'altra persona
-          if (registeredDay.organizationShiftSlot == personShiftDay.organizationShiftSlot) {
+          if (registeredDay.getOrganizationShiftSlot()
+              .equals(personShiftDay.getOrganizationShiftSlot())) {
             return Optional.of(Messages
-                .get("shift.slotAlreadyAssigned", registeredDay.personShift.person.fullName()));
+                .get("shift.slotAlreadyAssigned", registeredDay.getPersonShift()
+                    .getPerson().fullName()));
           }
         } else {
-          if (registeredDay.shiftSlot == personShiftDay.shiftSlot) {
+          if (registeredDay.getShiftSlot().equals(personShiftDay.getShiftSlot())) {
             return Optional.of(Messages
-                .get("shift.slotAlreadyAssigned", registeredDay.personShift.person.fullName()));
+                .get("shift.slotAlreadyAssigned", 
+                    registeredDay.getPersonShift().getPerson().fullName()));
           }
         }
 
@@ -278,19 +328,23 @@ public class ShiftManager2 {
     } else {
       long count = 1;
       long sum = 0;
-      if (personShiftDay.shiftType.organizaionShiftTimeTable != null) {
+      if (personShiftDay.getShiftType().getOrganizaionShiftTimeTable() != null) {
         sum = list.stream()
-            .filter(psd -> psd.organizationShiftSlot == personShiftDay.organizationShiftSlot).count();
+            .filter(psd -> psd.getOrganizationShiftSlot()
+                .equals(personShiftDay.getOrganizationShiftSlot())).count();
       } else {
-        sum = list.stream().filter(psd -> psd.shiftSlot == personShiftDay.shiftSlot).count();
+        sum = list.stream().filter(psd -> psd.getShiftSlot()
+            .equals(personShiftDay.getShiftSlot())).count();
       }
 
       if (sum + count > MAX_QUANTITY_IN_SLOT) {
-        return Optional.of(Messages.get("shift.maxQuantityInSlot", personShiftDay.shiftType.type));
+        return Optional.of(Messages.get("shift.maxQuantityInSlot", 
+            personShiftDay.getShiftType().getType()));
       }
       long total = list.stream().count();
       if (total + count > MAX_QUANTITY) {
-        return Optional.of(Messages.get("shift.maxQuantity", personShiftDay.shiftType.type));
+        return Optional.of(Messages.get("shift.maxQuantity", 
+            personShiftDay.getShiftType().getType()));
       }
     }
 
@@ -308,11 +362,11 @@ public class ShiftManager2 {
 
     final PersonShiftDayInTrouble trouble = new PersonShiftDayInTrouble(shift, cause);
 
-    if (!shift.hasError(trouble.cause)) {
+    if (!shift.hasError(trouble.getCause())) {
       trouble.save();
-      shift.troubles.add(trouble);
+      shift.getTroubles().add(trouble);
       log.info("Nuovo personShiftDayInTrouble {} - {} - {}",
-          shift.personShift.person.getFullname(), shift.date, cause);
+          shift.getPersonShift().getPerson().getFullname(), shift.getDate(), cause);
     }
   }
 
@@ -324,14 +378,14 @@ public class ShiftManager2 {
    */
   public void fixShiftTrouble(final PersonShiftDay shift, ShiftTroubles cause) {
 
-    java.util.Optional<PersonShiftDayInTrouble> psdit = shift.troubles.stream()
-        .filter(trouble -> trouble.cause == cause).findFirst();
+    java.util.Optional<PersonShiftDayInTrouble> psdit = shift.getTroubles().stream()
+        .filter(trouble -> trouble.getCause() == cause).findFirst();
 
     if (psdit.isPresent()) {
-      shift.troubles.remove(psdit.get());
+      shift.getTroubles().remove(psdit.get());
       psdit.get().delete();
       log.info("Rimosso personShiftDayInTrouble {} - {} - {}",
-          shift.personShift.person.getFullname(), shift.date, cause);
+          shift.getPersonShift().getPerson().getFullname(), shift.getDate(), cause);
     }
   }
 
@@ -348,24 +402,26 @@ public class ShiftManager2 {
      * 2. Controlli sul tempo a lavoro (Soglie, copertura orario, pause durante il turno etc...)
      * 3. 
      */
-    final ShiftType shiftType = Verify.verifyNotNull(personShiftDay.shiftType);
+    final ShiftType shiftType = Verify.verifyNotNull(personShiftDay.getShiftType());
     final LocalDate today = LocalDate.now();
 
-    log.debug("Ricalcoli sul turno di {} in data {}", personShiftDay.personShift.person,
-        personShiftDay.date);
+    log.debug("Ricalcoli sul turno di {} in data {}", personShiftDay.getPersonShift().getPerson(),
+        personShiftDay.getDate());
 
     final List<ShiftTroubles> shiftTroubles = new ArrayList<>();
 
     //Verifica se la persona è attiva in quell'attività in quel giorno
-    final boolean isActive = shiftType.personShiftShiftTypes.stream().anyMatch(
-        personShiftShiftType -> personShiftShiftType.personShift.equals(personShiftDay.personShift)
-        && personShiftShiftType.dateRange().contains(personShiftDay.date));
+    final boolean isActive = shiftType.getPersonShiftShiftTypes().stream().anyMatch(
+        personShiftShiftType -> personShiftShiftType.getPersonShift()
+        .equals(personShiftDay.getPersonShift())
+        && personShiftShiftType.dateRange().contains(personShiftDay.getDate()));
     if (!isActive) {
       shiftTroubles.add(ShiftTroubles.PERSON_NOT_ASSIGNED);
     }
-
+    
     Optional<PersonDay> optionalPersonDay =
-        personDayDao.getPersonDay(personShiftDay.personShift.person, personShiftDay.date);
+        personDayDao.getPersonDay(personShiftDay.getPersonShift().getPerson(), 
+            personShiftDay.getDate());
     int exceededThresholds = 0;
 
     if (optionalPersonDay.isPresent()) {
@@ -376,19 +432,19 @@ public class ShiftManager2 {
         shiftTroubles.add(ShiftTroubles.PERSON_IS_ABSENT);
       }
 
-      if (personShiftDay.date.isBefore(today)) {
+      if (personShiftDay.getDate().isBefore(today)) {
         fixShiftTrouble(personShiftDay, ShiftTroubles.FUTURE_DAY);        
       }
 
       // Nelle date passate posso effettuare i controlli sul tempo a lavoro
-      if (personShiftDay.date.isBefore(today)) {
+      if (personShiftDay.getDate().isBefore(today)) {
 
         final LocalTime slotBegin;
         final LocalTime slotEnd;
 
-        if (personShiftDay.organizationShiftSlot != null) {
-          slotBegin = personShiftDay.organizationShiftSlot.beginSlot;
-          slotEnd = personShiftDay.organizationShiftSlot.endSlot;
+        if (personShiftDay.getOrganizationShiftSlot() != null) {
+          slotBegin = personShiftDay.getOrganizationShiftSlot().getBeginSlot();
+          slotEnd = personShiftDay.getOrganizationShiftSlot().getEndSlot();
 
         } else {
           slotBegin = personShiftDay.slotBegin();
@@ -397,12 +453,13 @@ public class ShiftManager2 {
         // 2. Controlli sulle timbrature...
 
         List<PairStamping> validPairStampings = personDayManager
-            .getValidPairStampings(personDay.stampings);
+            .getValidPairStampings(personDay.getStampings());
 
         // Le coppie che si sovrappongono anche solo per un minuto con la finestra del turno
         List<PairStamping> shiftPairs = validPairStampings.stream()
             .filter(pair -> Range.closed(slotBegin, slotEnd).isConnected(
-                Range.closed(pair.first.date.toLocalTime(), pair.second.date.toLocalTime())))
+                Range.closed(pair.first.getDate().toLocalTime(), 
+                    pair.second.getDate().toLocalTime())))
             .collect(Collectors.toList());
 
         // Se ci sono timbrature valide..
@@ -411,10 +468,11 @@ public class ShiftManager2 {
           // 2.a Verifiche sulle soglie
 
           // Soglia d'ingresso
-          final LocalTime entranceStamping = shiftPairs.get(0).first.date.toLocalTime();
+          final LocalTime entranceStamping = shiftPairs.get(0).first.getDate().toLocalTime();
           final LocalTime entranceMaxThreshold = slotBegin
-              .plusMinutes(shiftType.entranceMaxTolerance);
-          final LocalTime entranceThreshold = slotBegin.plusMinutes(shiftType.entranceTolerance);
+              .plusMinutes(shiftType.getEntranceMaxTolerance());
+          final LocalTime entranceThreshold = slotBegin
+              .plusMinutes(shiftType.getEntranceTolerance());
 
           if (entranceStamping.isAfter(entranceMaxThreshold)) {
             // Ingresso fuori dalla tolleranza massima (turno non valido)
@@ -427,10 +485,10 @@ public class ShiftManager2 {
           }
 
           // Soglia di uscita
-          final LocalTime exitStamping = shiftPairs.get(shiftPairs.size() - 1).second.date
+          final LocalTime exitStamping = shiftPairs.get(shiftPairs.size() - 1).second.getDate()
               .toLocalTime();
-          final LocalTime exitMaxThreshold = slotEnd.minusMinutes(shiftType.exitMaxTolerance);
-          final LocalTime exitThreshold = slotEnd.minusMinutes(shiftType.exitTolerance);
+          final LocalTime exitMaxThreshold = slotEnd.minusMinutes(shiftType.getExitMaxTolerance());
+          final LocalTime exitThreshold = slotEnd.minusMinutes(shiftType.getExitTolerance());
 
           // Uscita fuori dalla tolleranza massima (turno non valido)
           if (exitStamping.isBefore(exitMaxThreshold)) {
@@ -444,8 +502,8 @@ public class ShiftManager2 {
 
           RangeSet<LocalTime> rangeSet = TreeRangeSet.create();
           shiftPairs.forEach(pairStamping -> {
-            rangeSet.add(Range.closed(pairStamping.first.date.toLocalTime(), pairStamping.second
-                .date.toLocalTime()));
+            rangeSet.add(Range.closed(pairStamping.first.getDate().toLocalTime(), 
+                pairStamping.second.getDate().toLocalTime()));
           });
 
           /*
@@ -454,9 +512,9 @@ public class ShiftManager2 {
            */
           final LocalTime lunchBreakStart;
           final LocalTime lunchBreakEnd;
-          if (personShiftDay.organizationShiftSlot != null) {
-            lunchBreakStart = personShiftDay.organizationShiftSlot.beginMealSlot;
-            lunchBreakEnd = personShiftDay.organizationShiftSlot.endMealSlot;
+          if (personShiftDay.getOrganizationShiftSlot() != null) {
+            lunchBreakStart = personShiftDay.getOrganizationShiftSlot().getBeginMealSlot();
+            lunchBreakEnd = personShiftDay.getOrganizationShiftSlot().getEndMealSlot();
           } else {
             lunchBreakStart = personShiftDay.lunchTimeBegin();
             lunchBreakEnd = personShiftDay.lunchTimeEnd();
@@ -465,7 +523,7 @@ public class ShiftManager2 {
           if (lunchBreakStart != null && lunchBreakEnd != null) {
             if (Range.open(slotBegin, slotEnd)
                 .encloses(Range.closed(lunchBreakStart, lunchBreakEnd))) {
-              rangeSet.add(Range.closed(lunchBreakStart,lunchBreakEnd));
+              rangeSet.add(Range.closed(lunchBreakStart, lunchBreakEnd));
             }
           }              
 
@@ -482,16 +540,16 @@ public class ShiftManager2 {
           }
 
           // La pausa fatta durante il turno supera quella permessa (turno non valido)
-          if (totalBreakMinutes > shiftType.breakMaxInShift) {
+          if (totalBreakMinutes > shiftType.getBreakMaxInShift()) {
             shiftTroubles.add(ShiftTroubles.MAX_BREAK_TOLERANCE_EXCEEDED);
-          } else if (totalBreakMinutes > shiftType.breakInShift
-              && totalBreakMinutes <= shiftType.breakMaxInShift) {
+          } else if (totalBreakMinutes > shiftType.getBreakInShift()
+              && totalBreakMinutes <= shiftType.getBreakMaxInShift()) {
             exceededThresholds++;
             shiftTroubles.add(ShiftTroubles.MIN_BREAK_TOLERANCE_EXCEEDED);
 
           }
 
-          if (exceededThresholds > shiftType.maxToleranceAllowed) {
+          if (exceededThresholds > shiftType.getMaxToleranceAllowed()) {
             shiftTroubles.add(ShiftTroubles.TOO_MANY_EXCEEDED_THRESHOLDS);
           }
 
@@ -507,7 +565,7 @@ public class ShiftManager2 {
 
     } else { // Non esiste il PersonDay
       // E' una data passata senza nessuna informazione per quel giorno
-      if (personShiftDay.date.isBefore(today)) {
+      if (personShiftDay.getDate().isBefore(today)) {
         shiftTroubles.add(ShiftTroubles.NOT_ENOUGH_WORKING_TIME);
       } else {
         shiftTroubles.add(ShiftTroubles.FUTURE_DAY);
@@ -523,7 +581,7 @@ public class ShiftManager2 {
     });
 
     shiftErrors.forEach(trouble -> fixShiftTrouble(personShiftDay, trouble));
-    personShiftDay.exceededThresholds = exceededThresholds;
+    personShiftDay.setExceededThresholds(exceededThresholds);
     personShiftDay.save();
 
   }
@@ -542,20 +600,43 @@ public class ShiftManager2 {
     log.debug("Ricalcolo del giorno di turno {} - {}", activity, date);
     List<PersonShiftDay> shifts = shiftDao.getShiftDaysByPeriodAndType(date, date, activity);
 
-    // 1. Controllo che siano coperti tutti gli slot
+    // 1. Controllo che siano coperti tutti gli slot solo se stiamo sulla configurazione CNR 
+    // o in una configurazione non CNR ma in cui gli slot devono essere tutti coperti
+    if (activity.getShiftTimeTable() != null || (activity.getOrganizaionShiftTimeTable() != null 
+        && activity.getOrganizaionShiftTimeTable().isConsiderEverySlot())) {
+      long slotNumber = 0;
+      if (activity.getOrganizaionShiftTimeTable() != null) {
+        slotNumber = activity.getOrganizaionShiftTimeTable().slotCount();
+        if (slotNumber > shifts.size()) {
+          shifts.forEach(shift -> setShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
+        } else {
+          shifts.forEach(shift -> fixShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
+        }
 
-    long slotNumber = 0;
-    if (activity.organizaionShiftTimeTable != null) {
-      slotNumber = activity.organizaionShiftTimeTable.slotCount();
-    } else {
-      slotNumber = activity.shiftTimeTable.slotCount();
-    }     
-
-    if (slotNumber > shifts.size()) {
-      shifts.forEach(shift -> setShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
-    } else {
-      shifts.forEach(shift -> fixShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
+      } else {
+        slotNumber = activity.getShiftTimeTable().slotCount();
+        if (slotNumber > shifts.size()) {
+          shifts.forEach(shift -> setShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
+        } else {
+          shifts.forEach(shift -> fixShiftTrouble(shift, ShiftTroubles.SHIFT_INCOMPLETED));
+        }
+      }  
     }
+
+    if (activity.isAllowUnpairSlots()) {      
+      long morningSize = shifts.stream()
+          .filter(psd -> psd.getShiftSlot().equals(ShiftSlot.MORNING)).count();
+      long afternoonSize = shifts.stream()
+          .filter(psd -> psd.getShiftSlot().equals(ShiftSlot.AFTERNOON)).count();
+      if (morningSize - afternoonSize > 1 || afternoonSize - morningSize > 1) {
+        shifts.forEach(shift 
+            -> setShiftTrouble(shift, ShiftTroubles.TOO_MANY_DIFFERENCE_BETWEEN_SLOTS));
+      } else {
+        shifts.forEach(shift 
+            -> fixShiftTrouble(shift, ShiftTroubles.TOO_MANY_DIFFERENCE_BETWEEN_SLOTS));
+      }
+    }
+
 
     // 2. Verifica che gli slot siano tutti validi e setta PROBLEMS_ON_OTHER_SLOT su quelli da
     // invalidare a causa degli altri turni non rispettati
@@ -634,6 +715,8 @@ public class ShiftManager2 {
   }
 
   /**
+   * Metodo che ritorna la lista delle persone coinvolte nei turni in un determinato periodo.
+   *
    * @param activity attività di turno
    * @param from data di inizio
    * @param to data di fine
@@ -642,11 +725,14 @@ public class ShiftManager2 {
    */
   public List<Person> involvedShiftWorkers(ShiftType activity, LocalDate from, LocalDate to) {
     return personShiftDayDao.byTypeInPeriod(from, to, activity, Optional.absent())
-        .stream().map(shift -> shift.personShift.person).distinct().collect(Collectors.toList());
+        .stream().map(shift -> shift.getPersonShift().getPerson())
+        .distinct().collect(Collectors.toList());
   }
 
 
   /**
+   * Metodo che calcola i minuti di turno maturati in base ai turni effettuati nel periodo.
+   *
    * @param activity attività di turno
    * @param person Persona sulla quale effettuare i calcoli
    * @param from data iniziale
@@ -656,18 +742,19 @@ public class ShiftManager2 {
    */
   public int calculatePersonShiftCompetencesInPeriod(ShiftType activity, Person person,
       LocalDate from, LocalDate to, ShiftPeriod type) {
-    
+
     int shiftCompetences = 0;
 
     int paidMinutes = 0;
-    if (activity.shiftTimeTable != null) {
-      paidMinutes = activity.shiftTimeTable.paidMinutes;
+    if (activity.getShiftTimeTable() != null) {
+      paidMinutes = activity.getShiftTimeTable().getPaidMinutes();
     }
 
     final List<PersonShiftDay> shifts = personShiftDayDao
         .byTypeInPeriod(from, to, activity, Optional.of(person));
     List<PersonShiftDay> list = Lists.newArrayList();
-    //Cerco gli intervalli orari per stabilire a quale competenza assegnare la quantità di ore di turno
+    //Cerco gli intervalli orari per stabilire a quale competenza assegnare la quantità 
+    //di ore di turno
     Optional<TimeInterval> timeInterval = null;
     Optional<TimeInterval> timeInterval2 = null;
     TimeInterval daily = null;
@@ -676,12 +763,14 @@ public class ShiftManager2 {
     GeneralSetting setting = generalSettingDao.generalSetting();
     if (setting != null) {
       //Costruisco l'intervallo temporale per il turno diurno e il turno notturno
-      daily = new TimeInterval(convertFromString(setting.startDailyShift), 
-          convertFromString(setting.endDailyShift));
-      
-      night = new TimeInterval(convertFromString(setting.startNightlyShift), 
-          new LocalTime(23,59));
-      beforeDawn = new TimeInterval(new LocalTime(0,0), convertFromString(setting.endNightlyShift));
+      daily = new TimeInterval(convertFromString(setting.getStartDailyShift()), 
+          convertFromString(setting.getEndDailyShift()));
+
+      night = new TimeInterval(convertFromString(setting.getStartNightlyShift()), 
+          new LocalTime(23, 59));
+      beforeDawn = new TimeInterval(
+          new LocalTime(0, 0), convertFromString(setting.getEndNightlyShift()));
+
     } else {
       log.warn("Manca il general setting relativo all'ente. Occore definirlo!!!");
       return 0;
@@ -692,67 +781,114 @@ public class ShiftManager2 {
         timeInterval = Optional.fromNullable(daily);
         timeInterval2 = Optional.<TimeInterval>absent();
         list = shifts.stream().filter(day -> { 
-          return !personDayManager.isHoliday(day.personShift.person, day.date);
+          return !personDayManager.isHoliday(day.getPersonShift().getPerson(), day.getDate(), 
+              setting.isSaturdayHolidayShift());
         }).collect(Collectors.toList());
+
         break;
       case nightly:
         timeInterval = Optional.fromNullable(night);
         timeInterval2 = Optional.fromNullable(beforeDawn);
         list = shifts.stream().filter(day -> { 
-          return !personDayManager.isHoliday(day.personShift.person, day.date);
+          return !personDayManager.isHoliday(day.getPersonShift().getPerson(), day.getDate(), 
+              setting.isSaturdayHolidayShift());
         }).collect(Collectors.toList());
+
         break;
       case holiday:
-        timeInterval = Optional.<TimeInterval>absent();
-        timeInterval2 = Optional.<TimeInterval>absent();
+        if (setting.isHolidayShiftInNightToo()) {
+          timeInterval = Optional.of(new TimeInterval(new LocalTime(0, 0), new LocalTime(23, 59)));
+          timeInterval2 = Optional.<TimeInterval>absent();
+        } else {
+          timeInterval = Optional.fromNullable(daily);
+          timeInterval2 = Optional.<TimeInterval>absent();
+        }
+        
         list = shifts.stream().filter(day -> { 
-          return personDayManager.isHoliday(day.personShift.person, day.date);
+          return personDayManager.isHoliday(day.getPersonShift().getPerson(), day.getDate(), 
+              setting.isSaturdayHolidayShift());
         }).collect(Collectors.toList());
+
         break;
       default:
         break;
     }
-
+    List<ShiftTroubles> troubles = Lists.newArrayList();
+    if (activity.getOrganizaionShiftTimeTable() != null
+        && !activity.getOrganizaionShiftTimeTable().isConsiderEverySlot()) {
+      troubles.addAll(ShiftTroubles.warningTroubles());
+    } else {
+      troubles.addAll(ShiftTroubles.invalidatingTroubles());
+    }
     // I conteggi funzionano nel caso lo stato dei turni sia aggiornato
     for (PersonShiftDay shift : list) {
       // Nessun errore sul turno
-      if (!shift.hasOneOfErrors(ShiftTroubles.invalidatingTroubles())) {
+      if (!shift.hasOneOfErrors(troubles)) {
         PersonDay pd = personDayManager
-            .getOrCreateAndPersistPersonDay(shift.personShift.person, shift.date);
-        if (shift.organizationShiftSlot != null) {
-          if (shift.organizationShiftSlot.shiftTimeTable.calculationType
+            .getOrCreateAndPersistPersonDay(shift.getPersonShift().getPerson(), shift.getDate());
+        if (shift.getOrganizationShiftSlot() != null) {
+
+          if (shift.getOrganizationShiftSlot().getShiftTimeTable().getCalculationType()
               .equals(CalculationType.percentage)) {
-            shiftCompetences += isIntervalTotallyInSlot(pd, shift, timeInterval)
-                - (shift.exceededThresholds * SIXTY_MINUTES);
+            //FIXME: che succede se siamo nel festivo e ci sono timbrature notturne?
+            int quantity = isIntervalTotallyInSlot(pd, shift, timeInterval)
+                - (shift.getExceededThresholds() * SIXTY_MINUTES);
+            if (quantity < 0) {
+              quantity = 0;
+            }
+            shiftCompetences = shiftCompetences + quantity;
             if (timeInterval2.isPresent()) {
               shiftCompetences += isIntervalTotallyInSlot(pd, shift, timeInterval2);
             }
-//            shiftCompetences += shift.organizationShiftSlot.minutesPaid 
-//                - (shift.exceededThresholds * SIXTY_MINUTES);
+
           } else {    
-            if (shift.organizationShiftSlot.paymentType == PaymentType.SPLIT_CALCULATION) {
+            if (shift.getOrganizationShiftSlot().getPaymentType() 
+                  == PaymentType.SPLIT_CALCULATION) {
               shiftCompetences += quantityCountForShift(shift, pd, timeInterval);
             } else {
-              shiftCompetences += shift.organizationShiftSlot.minutesPaid 
-                  - (shift.exceededThresholds * SIXTY_MINUTES);
+              shiftCompetences += shift.getOrganizationShiftSlot().getMinutesPaid() 
+                  - (shift.getExceededThresholds() * SIXTY_MINUTES);
             }
-            
           }
         } else {
-          shiftCompetences += paidMinutes - (shift.exceededThresholds * SIXTY_MINUTES);
+          shiftCompetences += paidMinutes - (shift.getExceededThresholds() * SIXTY_MINUTES);
         }
         log.info("Competenza calcolata sul turno di {}-{}: {}", 
-            person.fullName(), shift.date, shiftCompetences 
-            - (shift.exceededThresholds * SIXTY_MINUTES));
+            person.fullName(), shift.getDate(), shiftCompetences 
+            - (shift.getExceededThresholds() * SIXTY_MINUTES));
       }
     }
 
+    if (setting.isRoundingShiftQuantity()) {
+      shiftCompetences = roundingShift(shiftCompetences);
+    } 
     return shiftCompetences;
   }
 
+  /**
+   * Metodo di utilità che arrotonda il quantitativo di ore di turno all'ora superiore
+   * o inferiore a seconda che la divisione % 60 del quantitativo sia maggiore o minore di mezz'ora.
+   *
+   * @param shiftCompetence la quantità di ore di turno (in minuti)
+   * @return l'arrotondamento all'ora superiore o inferiore della quantità in minuti 
+   *     di ore di turno.
+   */
+  private int roundingShift(int shiftCompetence) {
+    if (shiftCompetence == 0) {
+      return 0;
+    }
+    if (shiftCompetence % 60 > DateTimeConstants.MINUTES_PER_HOUR / 2) {
+      shiftCompetence = shiftCompetence 
+          + (DateTimeConstants.MINUTES_PER_HOUR - shiftCompetence % 60);
+    } else {
+      shiftCompetence = shiftCompetence - shiftCompetence % 60;
+    }
+    return shiftCompetence;
+  }
 
   /**
    * Metodo che ritorna la quantità di minuti lavorata all'interno della fascia di turno.
+   *
    * @param psd il personShiftDday del giorno
    * @param pd il personDay del giorno
    * @param timeInterval (optional) l'intervallo in cui cercare il turno di un certo tipo
@@ -762,15 +898,17 @@ public class ShiftManager2 {
       Optional<TimeInterval> timeInterval) {
     int timeIntersection = 0;
     TimeInterval interval = null;
-    List<PairStamping> pairList = personDayManager.getValidPairStampings(pd.stampings);
+    List<PairStamping> pairList = personDayManager.getValidPairStampings(pd.getStampings());
     for (PairStamping pair : pairList) {
       interval = DateUtility.intervalIntersection(
-          new TimeInterval(psd.organizationShiftSlot.beginSlot, psd.organizationShiftSlot.endSlot), 
-          new TimeInterval(pair.first.date.toLocalTime(), 
-              pair.second.date.toLocalTime()));
+          new TimeInterval(psd.getOrganizationShiftSlot().getBeginSlot(), 
+              psd.getOrganizationShiftSlot().getEndSlot()), 
+          new TimeInterval(pair.first.getDate().toLocalTime(), 
+              pair.second.getDate().toLocalTime()));
       if (interval != null) {
         if (timeInterval.isPresent()) {
-          TimeInterval intersection = DateUtility.intervalIntersection(timeInterval.get(), interval);
+          TimeInterval intersection = 
+              DateUtility.intervalIntersection(timeInterval.get(), interval);
           if (intersection == null) {
             return 0;
           }
@@ -783,37 +921,46 @@ public class ShiftManager2 {
 
     return timeIntersection;
   }
-  
+
   /**
    * Metodo che ritorna la quantità di minuti da pagare in un certo slot (diurno/notturno).
+   *
    * @param pd il personday di un certo giorno
    * @param psd il personshiftday di un certo giorno
    * @param interval l'eventuale intervallo di validità dello slot (diurno/notturno)
    * @return la quantità in minuti da pagare nello specifico slot di turno.
    */
-  private int isIntervalTotallyInSlot(PersonDay pd, PersonShiftDay psd, Optional<TimeInterval> interval) {
+  private int isIntervalTotallyInSlot(PersonDay pd, PersonShiftDay psd, 
+      Optional<TimeInterval> interval) {
     if (interval.isPresent()) {
       int quantity = quantityCountForShift(psd, pd, interval);
-      if (quantity < psd.organizationShiftSlot.minutesPaid) {
+      if (quantity < 0) {
+        return 0;
+      }
+      if (quantity < psd.getOrganizationShiftSlot().getMinutesPaid()) {
         return quantity;
       }
     }
-    return psd.organizationShiftSlot.minutesPaid;
+    return psd.getOrganizationShiftSlot().getMinutesPaid();
   }
 
   /**
    * Metodo che converte un'orario in formato stringa in un orario in formato LocalTime.
+   *
    * @param str la stringa da convertire
    * @return il LocalTime generato a partire dalla stringa passata come parametro.
    */
   private LocalTime convertFromString(String str) {
     final String splitter = ":";
     String[] s = str.split(splitter);
-    LocalTime time = new LocalTime(new Integer(s[0]), new Integer(s[1]));
+    LocalTime time = new LocalTime(Integer.valueOf(s[0]), Integer.valueOf(s[1]));
     return time;
   }
 
   /**
+   * Metodo che ritorna la lista degli ShiftTroubles appartenenti a una persona sull'attività
+   * di turno in un certo periodo.
+   *
    * @param activity attività di turno
    * @param person Persona
    * @param from data iniziale
@@ -825,14 +972,17 @@ public class ShiftManager2 {
       Person person, LocalDate from, LocalDate to) {
 
     return personShiftDayDao.byTypeInPeriod(from, to, activity, Optional.of(person)).stream()
-        .map(shift -> shift.troubles)
+        .map(shift -> shift.getTroubles())
         .flatMap(troubles ->   troubles.stream())
-        .map(trouble -> trouble.cause)
+        .map(trouble -> trouble.getCause())
         .distinct().collect(Collectors.toList());
 
   }
 
   /**
+   * Metodo che restituisce il residuo della competenza turno, se ne è avanzato, 
+   * dal mese precedente.
+   *
    * @param person Person della quale recuperare il residuo dei turni dai mesi precedenti
    * @param yearMonth Mese rispetto al quale verificare i residui
    * @return restituisce il residuo delle competenze di turno dal mese più recente antecedente
@@ -847,13 +997,16 @@ public class ShiftManager2 {
 
     int residualCompetence = 0;
 
-    if (lastShiftCompetence != null && lastShiftCompetence.exceededMins != null) {
-      residualCompetence = lastShiftCompetence.exceededMins;
+    if (lastShiftCompetence != null && lastShiftCompetence.getExceededMins() != null) {
+      residualCompetence = lastShiftCompetence.getExceededMins();
     }
     return residualCompetence;
   }
 
   /**
+   * Metodo che ritorna la lista di tutte le persone abilitate sull'attività nell'intervallo
+   * di tempo specificato.
+   *
    * @param activity attività di turno
    * @param start data di inizio del periodo
    * @param end data di fine del periodo
@@ -863,7 +1016,7 @@ public class ShiftManager2 {
   public List<PersonShiftShiftType> shiftWorkers(ShiftType activity, LocalDate start,
       LocalDate end) {
     if (activity.isPersistent() && start != null && end != null) {
-      return activity.personShiftShiftTypes.stream()
+      return activity.getPersonShiftShiftTypes().stream()
           .filter(personShiftShiftType -> personShiftShiftType.dateRange().isConnected(
               Range.closed(start, end)))
           .collect(Collectors.toList());
@@ -883,7 +1036,7 @@ public class ShiftManager2 {
 
     Verify.verifyNotNull(shiftTypeMonth);
 
-    final LocalDate monthBegin = shiftTypeMonth.yearMonth.toLocalDate(1);
+    final LocalDate monthBegin = shiftTypeMonth.getYearMonth().toLocalDate(1);
     final LocalDate monthEnd = monthBegin.dayOfMonth().withMaximumValue();
 
     final LocalDate today = LocalDate.now();
@@ -896,7 +1049,7 @@ public class ShiftManager2 {
       lastDay = monthEnd;
     }
 
-    final List<Person> involvedShiftPeople = involvedShiftWorkers(shiftTypeMonth.shiftType,
+    final List<Person> involvedShiftPeople = involvedShiftWorkers(shiftTypeMonth.getShiftType(),
         monthBegin, monthEnd);
 
     Map<Person, Integer> totalPeopleCompetences = new HashMap<>();
@@ -904,35 +1057,34 @@ public class ShiftManager2 {
     Map<Person, Integer> totalNightlyPeopleCompetences = new HashMap<>();
 
     // Recupero tutte le attività approvate in quel mese
-    shiftTypeMonthDao.approvedInMonthRelatedWith(shiftTypeMonth.yearMonth, involvedShiftPeople)
-    .forEach(monthStatus -> {
-      // Per ogni attività calcolo le competenze di ogni persona coinvolta
-      involvedShiftPeople.forEach(person -> {
-        int activityCompetence = 0;
-        //Cerco le competenze di turno diurno...
-        activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.shiftType,
-            person, monthBegin, lastDay, ShiftPeriod.daily);
-        // Somma algebrica delle competenze delle persone derivanti da ogni attività sulla
-        // quale ha svolto i turni
-        totalPeopleCompetences.merge(person, activityCompetence, 
-            (previousValue, newValue) -> newValue + previousValue);
-        //Cerco le competenze di turno festivo...
-        activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.shiftType,
-            person, monthBegin, lastDay, ShiftPeriod.holiday);
-        totalHolidayPeopleCompetences.merge(person, activityCompetence, 
-            (previousValue, newValue) -> newValue + previousValue);
-        //Cerco le competenze di turno notturno...
-        activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.shiftType, 
-            person, monthBegin, lastDay, ShiftPeriod.nightly);
-        totalNightlyPeopleCompetences.merge(person, activityCompetence, 
-            (previousValue, newValue) -> newValue + previousValue);
-      });
-    });
+    shiftTypeMonthDao.approvedInMonthRelatedWith(shiftTypeMonth.getYearMonth(), involvedShiftPeople)
+        .forEach(monthStatus -> {
+          // Per ogni attività calcolo le competenze di ogni persona coinvolta
+          involvedShiftPeople.forEach(person -> {
+            int activityCompetence = 0;
+            //Cerco le competenze di turno diurno...
+            activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.getShiftType(),
+                person, monthBegin, lastDay, ShiftPeriod.daily);
+            // Somma algebrica delle competenze delle persone derivanti da ogni attività sulla
+            // quale ha svolto i turni
+            totalPeopleCompetences.merge(person, activityCompetence, 
+                (previousValue, newValue) -> newValue + previousValue);
+            //Cerco le competenze di turno festivo...
+            activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.getShiftType(),
+                person, monthBegin, lastDay, ShiftPeriod.holiday);
+            totalHolidayPeopleCompetences.merge(person, activityCompetence, 
+                (previousValue, newValue) -> newValue + previousValue);
+            //Cerco le competenze di turno notturno...
+            activityCompetence = calculatePersonShiftCompetencesInPeriod(monthStatus.getShiftType(),
+                person, monthBegin, lastDay, ShiftPeriod.nightly);
+            totalNightlyPeopleCompetences.merge(person, activityCompetence, 
+                (previousValue, newValue) -> newValue + previousValue);
+          });
+        });
     //Assegno i codici di competenza per andare ad assegnare le competenze corrette
     CompetenceCode shiftCode = competenceCodeDao.getCompetenceCodeByCode(codShift);
     CompetenceCode nightCode = competenceCodeDao.getCompetenceCodeByCode(codShiftNight);
     CompetenceCode holidayCode = competenceCodeDao.getCompetenceCodeByCode(codShiftHolyday);
-
 
     involvedShiftPeople.forEach(person -> {
       Integer calculatedCompetences = null;
@@ -940,18 +1092,25 @@ public class ShiftManager2 {
       saveCompetence(person, shiftTypeMonth, shiftCode, calculatedCompetences);
       // Verifico che per le person coinvolte ci siano o no eventuali residui dai mesi precedenti
 
-      calculatedCompetences = totalHolidayPeopleCompetences.get(person);
-      saveCompetence(person, shiftTypeMonth, holidayCode, calculatedCompetences);
+      if (person.getPersonCompetenceCodes().stream()
+          .anyMatch(pcc -> pcc.getCompetenceCode().equals(holidayCode))) {
+        calculatedCompetences = totalHolidayPeopleCompetences.get(person);
+        saveCompetence(person, shiftTypeMonth, holidayCode, calculatedCompetences);
+      }
+      if (person.getPersonCompetenceCodes().stream()
+          .anyMatch(pcc -> pcc.getCompetenceCode().equals(nightCode))) {
+        calculatedCompetences = totalNightlyPeopleCompetences.get(person);
+        saveCompetence(person, shiftTypeMonth, nightCode, calculatedCompetences);
+      }
 
-      calculatedCompetences = totalNightlyPeopleCompetences.get(person);
-      saveCompetence(person, shiftTypeMonth, nightCode, calculatedCompetences);
 
     });
 
   }
 
   /**
-   * 
+   * Metodo che salva la quantità di ore di turno.
+   *
    * @param person il dipendente per cui si vuole salvare la competenza
    * @param shiftTypeMonth il pregresso se presente con l'informazione se è già stato approvato 
    *     o meno
@@ -960,7 +1119,8 @@ public class ShiftManager2 {
    */
   private void saveCompetence(Person person, ShiftTypeMonth shiftTypeMonth, 
       CompetenceCode shiftCode, Integer calculatedCompetences) {
-    int lastShiftCompetence = getPersonResidualShiftCompetence(person, shiftTypeMonth.yearMonth);
+    int lastShiftCompetence = getPersonResidualShiftCompetence(person, 
+        shiftTypeMonth.getYearMonth());
     //
 
     // TODO: 12/06/17 sicuramente andranno differenziate tra T1 e T2
@@ -972,14 +1132,15 @@ public class ShiftManager2 {
     }
 
     Optional<Competence> shiftCompetence = competenceDao
-        .getCompetence(person, shiftTypeMonth.yearMonth.getYear(), 
-            shiftTypeMonth.yearMonth.getMonthOfYear(), shiftCode);
+        .getCompetence(person, shiftTypeMonth.getYearMonth().getYear(), 
+            shiftTypeMonth.getYearMonth().getMonthOfYear(), shiftCode);
 
     Competence newCompetence = 
-        shiftCompetence.or(new Competence(person, shiftCode, shiftTypeMonth.yearMonth.getYear(), 
-            shiftTypeMonth.yearMonth.getMonthOfYear()));
-    newCompetence.valueApproved = totalShiftMinutes / 60;
-    newCompetence.exceededMins = totalShiftMinutes % 60;
+        shiftCompetence.or(
+            new Competence(person, shiftCode, shiftTypeMonth.getYearMonth().getYear(),
+            shiftTypeMonth.getYearMonth().getMonthOfYear()));
+    newCompetence.setValueApproved(totalShiftMinutes / 60);
+    newCompetence.setExceededMins(totalShiftMinutes % 60);
     // newCompetence.valueRequested = ; e qui cosa ci va?
 
     newCompetence.save();
@@ -988,6 +1149,7 @@ public class ShiftManager2 {
 
   /**
    * salva il personShiftDay ed effettua i ricalcoli.
+   *
    * @param personShiftDay il personshiftDay da salvare
    */
   public void save(PersonShiftDay personShiftDay) {
@@ -998,6 +1160,7 @@ public class ShiftManager2 {
 
   /**
    * cancella il personShiftDay.
+   *
    * @param personShiftDay il personShiftDay da cancellare
    */
   public void delete(PersonShiftDay personShiftDay) {
@@ -1008,7 +1171,7 @@ public class ShiftManager2 {
 
   private void recalculate(PersonShiftDay personShiftDay) {
 
-    final ShiftType shiftType = personShiftDay.shiftType;
+    final ShiftType shiftType = personShiftDay.getShiftType();
 
     // Aggiornamento dello ShiftTypeMonth
     if (shiftType != null) {
@@ -1019,7 +1182,7 @@ public class ShiftManager2 {
       }
 
       // Ricalcoli sui giorni coinvolti dalle modifiche
-      checkShiftDayValid(personShiftDay.date, shiftType);
+      checkShiftDayValid(personShiftDay.getDate(), shiftType);
 
       /*
        *  Recupera la data precedente dallo storico e verifica se c'è stato un 
@@ -1027,25 +1190,25 @@ public class ShiftManager2 {
        *  sul giorno precedente (spostamento di un turno da un giorno all'altro)
        */
       HistoricalDao.lastRevisionsOf(PersonShiftDay.class, personShiftDay.id)
-      .stream().limit(1).map(historyValue -> {
-        PersonShiftDay pd = (PersonShiftDay) historyValue.value;
-        return pd.date;
-      }).filter(Objects::nonNull).distinct()
-      .forEach(localDate -> {
-        if (!localDate.equals(personShiftDay.date)) {
-          checkShiftDayValid(localDate, shiftType);
-        }
-      });
+          .stream().limit(1).map(historyValue -> {
+            PersonShiftDay pd = (PersonShiftDay) historyValue.value;
+            return pd.getDate();
+          }).filter(Objects::nonNull).distinct()
+          .forEach(localDate -> {
+            if (!localDate.equals(personShiftDay.getDate())) {
+              checkShiftDayValid(localDate, shiftType);
+            }
+          });
 
       // Aggiornamento del relativo ShiftTypeMonth (per incrementare il campo version)
-      ShiftTypeMonth newStatus = shiftType.monthStatusByDate(personShiftDay.date)
+      ShiftTypeMonth newStatus = shiftType.monthStatusByDate(personShiftDay.getDate())
           .orElse(new ShiftTypeMonth());
 
-      if (newStatus.shiftType != null) {
+      if (newStatus.getShiftType() != null) {
         newStatus.updatedAt = LocalDateTime.now();
       } else {
-        newStatus.yearMonth = new YearMonth(personShiftDay.date);
-        newStatus.shiftType = shiftType;
+        newStatus.setYearMonth(new YearMonth(personShiftDay.getDate()));
+        newStatus.setShiftType(shiftType);
       }
       newStatus.save();
 
@@ -1054,22 +1217,22 @@ public class ShiftManager2 {
 
   /**
    * Metodo che ritorna il giusto numero di slot associati all'attività.
+   *
    * @param timeTable la timetable relativa all'attività
    * @return la lista degli slot di turno attivi sulla timetable passata come parametro.
    */
   public List<ShiftSlot> getSlotsFromTimeTable(ShiftTimeTable timeTable) {
     List<ShiftSlot> list = Lists.newArrayList();
-    if (timeTable.startMorning != null && timeTable.endMorning != null) {
+    if (timeTable.getStartMorning() != null && timeTable.getEndMorning() != null) {
       list.add(ShiftSlot.MORNING);
     }
-    if (timeTable.startAfternoon != null && timeTable.endAfternoon != null) {
+    if (timeTable.getStartAfternoon() != null && timeTable.getEndAfternoon() != null) {
       list.add(ShiftSlot.AFTERNOON);
     }
-    if (timeTable.startEvening != null && timeTable.endEvening != null) {
+    if (timeTable.getStartEvening() != null && timeTable.getEndEvening() != null) {
       list.add(ShiftSlot.EVENING);
     }
     return list;
   }
-
 
 }
