@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2023  Consiglio Nazionale delle Ricerche
+ *
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU Affero General Public License as
+ *     published by the Free Software Foundation, either version 3 of the
+ *     License, or (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU Affero General Public License for more details.
+ *
+ *     You should have received a copy of the GNU Affero General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package synch.perseoconsumers.office;
 
 import com.google.common.base.Function;
@@ -11,23 +28,21 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
-
 import helpers.rest.ApiRequestException;
-
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
-
 import lombok.extern.slf4j.Slf4j;
-
 import models.Institute;
 import models.Office;
-
 import play.libs.WS;
 import play.libs.WS.HttpResponse;
-
 import synch.perseoconsumers.AnagraficaApis;
 
+/**
+ * Preleva da Perseo le informazioni relative agli uffici.
+ */
 @Slf4j
 public class OfficePerseoConsumer {
 
@@ -182,10 +197,10 @@ public class OfficePerseoConsumer {
   private Institute epasConverter(PerseoInstitute perseoInstitute) {
 
     Institute institute = new Institute();
-    institute.perseoId = new Long(perseoInstitute.id);
-    institute.cds = perseoInstitute.cds;
-    institute.name = perseoInstitute.name;
-    institute.code = perseoInstitute.code;
+    institute.setPerseoId(Long.valueOf(perseoInstitute.id));
+    institute.setCds(perseoInstitute.cds);
+    institute.setName(perseoInstitute.name);
+    institute.setCode(perseoInstitute.code);
     return institute;
   }
 
@@ -204,13 +219,15 @@ public class OfficePerseoConsumer {
       }
 
       Office office = new Office();
-      office.perseoId = new Long(perseoOffice.id);
-      office.codeId = perseoOffice.codeId;
-      office.code = perseoOffice.code;
-      office.name = perseoOffice.shortName;
-      office.address = perseoOffice.street;
-      office.institute = institute;
-      institute.seats.add(office);
+      office.setPerseoId(Long.valueOf(perseoOffice.id));
+      office.setCodeId(perseoOffice.codeId);
+      office.setCode(perseoOffice.code);
+      office.setName(perseoOffice.shortName);
+      office.setAddress(perseoOffice.street);
+      office.setInstitute(institute);
+      Set<Office> offices = institute.getSeats();
+      offices.add(office);
+      institute.setSeats(offices);
     }
     return institutesMap;
   }
@@ -248,7 +265,7 @@ public class OfficePerseoConsumer {
   public Map<String, Institute> perseoInstitutesByCds() {
     Map<String, Institute> institutesMap = Maps.newHashMap();
     for (Institute institute : perseoInstitutes()) {
-      institutesMap.put(institute.cds, institute);
+      institutesMap.put(institute.getCds(), institute);
     }
     return institutesMap;
   }
@@ -277,7 +294,7 @@ public class OfficePerseoConsumer {
     Optional<Institute> institute = Optional.fromNullable(epasConverter(
         Lists.newArrayList(perseoOffice)).values().iterator().next());
 
-    if (!institute.isPresent() || institute.get().seats.isEmpty()) {
+    if (!institute.isPresent() || institute.get().getSeats().isEmpty()) {
       return Optional.<Institute>absent();
     }
     return institute;
